fix(scroll): fix arrow up z-index + add data

--- a/src/components/ScrollDownButton.scss
+++ b/src/components/ScrollDownButton.scss
@@ -3,7 +3,7 @@
   bottom: 24px;
   left: 50%;
   translate: -50% 0;
-  z-index: 1000;
+  z-index: 50;
 
   width: 44px;
   height: 44px;
